# programming_tests

./: .gitignore  README.md  multiprocessing_test.py  setup_cloud9.sh  setup_conda.sh  setup_python3.sh  test_cloud9.sh  test_conda.sh  test_python3.sh
boost_python/: Makefile  hello_ext.cpp  hello_world.py  setup_cloud9.sh  setup_python3.sh  test_cloud9.sh  test_python3.sh
cpp/: Makefile  async_test.cpp  atoi_impl.c  double_free.cpp  doubly_linked_list.cpp  forward.cpp  functional.cpp  inheritance.cpp  inheritance_test.cpp  move.cpp  packaged_task.cpp  parse_csv.cpp  prbs7.c  prbs7.cpp  prbs7_c.c  primes.cpp  pthread_hello.c  remove_char_inplace.cpp  reverse_string.c  sampling_vose_alias_method.cpp  selection_sort.cpp  split_string.cpp  ternary_conditional.c  test.c  test_cloud9.sh  thread_add.cpp  thread_hello.cpp  threadadd.c
cython/: Makefile  basel0.py  basel1.pyx  basel2.py  chudnovsky_pi.py  chudnovsky_pi1.pyx  chudnovsky_pi2.py  cos_func.pyx  fibonacci0.py  fibonacci1.pyx  fibonacci2.py  hello.pyx  integ.c  integ0.py  integ1.pyx  integ2.pyx  integ3.py  integ4.pyx  integral_approx0.py  integral_approx1.py  integral_approx2.pyx  integral_approx3.py  matmul0.py  matmul1.py  matmul2.pyx  matmul3.pyx  pi_wallis0.py  pi_wallis1.pyx  pi_wallis2.py  primes.c  primes.py  primes0.py  primes1.pyx  primes2.pyx  primes3.py  rect.pyx  run_basel.py  run_chudnovsky.py  run_cos.py  run_fibonacci.py  (+21 more)
golang/: test0.go  test1.go  test10.go  test11.go  test12.go  test13.go  test14.go  test2.go  test3.go  test5.go  test7.go  test8.go  test9.go
gurobipy/: basic.py  knapsack.py  program.py  transport.py
hackerrank/: circle_city.c  circle_city.cpp  circle_city.py  coin_change_problem.py  connecting_towns.py  cpp_strings.cpp  even_tree.py  fast_exponentiation.py  fibonacci_modified.py  frog_in_maze.py  ice_cream_parlor.py  journey_to_mars  journey_to_mars.cpp  journey_to_mars.py  knapsack.py  maximize_sum.cpp  maximize_sum.py  operator_test.py  partition.py  quicksort.py  quicksort2.py  quicksort_inplace.py  quicksort_inplace_broken.py  quicksort_stack.py  smith_number.cpp  smith_number.py
java/: Circle.java  HelloWorld.java  Main.java  Rectangle.java  Student.java
kaggle_data_science_london/: kaggle_dsl.py  plot_timing.py
kaggle_digit_recognizer/: digit_recognizer.py
kaggle_word2vec/: BagOfWords.py  (+1 more)
rust/ddboline_notification_bot/: Cargo.toml
rust/ddboline_notification_bot/src/: main.rs
rust/one_time_pad/: Cargo.toml  Dockerfile  Makefile  setup.py
rust/one_time_pad/one_time_pad/: __init__.py
rust/one_time_pad/src/: lib.rs
rust/rust_taskflow/: Cargo.toml  README.md
rust/rust_taskflow/src/: lib.rs
rust/world_record_plot/: Cargo.toml  running_world_records_men.txt
rust/world_record_plot/src/: main.rs
(+321 files in other folders)
