[package]
name = "ddboline_notification_bot"
version = "0.1.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.6"
futures = "0.1"
tokio-core = "0.1"
dotenv = "0.14"
