[package]
name = "ddboline_notification_bot"
version = "0.1.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
telegram-bot = "0.8"
futures = "0.3"
tokio = {version="1.28", features=["full"]}
dotenv = "0.15"
