[package]
name = "one_time_pad"
version = "0.1.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[dependencies]
rayon = "1.3"
rand = "0.7"
spin="0.5"
pyo3 = {version="0.11", features=["macros", "extension-module"]}
pyo3cls = "0.11"
mashup = "0.1"

[lib]
name = "one_time_pad"
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
]
