[package]
name = "rust_taskflow"
version = "0.1.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
async-trait = "0.1"
tokio = {version="1.28", features=["full"]}
futures = "0.3"
anyhow = "1.0"
rand = "0.8"