[package]
name = "world_record_plot"
version = "0.1.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
chrono = "0.4"
ndarray = "0.13"
optimize = "0.1"
